# sofl

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  INSTALL  NEWS  README.md  TODO  sofl-config.cmake.in
.github/workflows/: codeql.yml  continuous-integration-workflow.yml
src/: CMakeLists.txt  SoFl.rc.cmake.in
test-code/: CMakeLists.txt  README
test-code/Mentor/: 02.1.Cone.cpp  02.3.Trackball.cpp  09.4.PickAction.cpp  10.1.addEventCB.cpp  16.1.Overlay.cpp  CMakeLists.txt
test-code/assertdbg/: CMakeLists.txt  crash.cpp
test-code/common/: SceneBuilder.h  SimpleFrame.h
test-code/components/: CMakeLists.txt  coloreditor.cpp  fl_renderarea.cpp  graphed.cpp  materialeditor.cpp  planeviewer.cpp  renderarea.cpp  scrollview.cpp  tripleview.cpp  withoutdecor0.cpp  withoutdecor1.cpp
test-code/data/: xvfb_runner.sh
test-code/fltk/: CMakeLists.txt  buttons_with_image.cpp  flflex.cpp  test_egl.cpp  xpm_loader.cpp
test-code/fltk/simple/: CMakeLists.txt  OpenGL3test.cxx  fltkWithOpenInventorWindow.cpp  main.cpp
test-code/fltk/uiaction/: uiaction.cpp
test-code/fltk/wxFormBuilder/example1/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  example_1.cpp  example_1.h  main.cpp
test-code/viewers/: CMakeLists.txt  allviewer.cpp  background_canvas.cpp  bottomtrim.cpp  decorationwidgets.cpp  embeddedexaminer.cpp  examinerviewer.cpp  fullviewer.cpp  lefttrim.cpp  righttrim.cpp  test_right_trim.cpp
testsuite/: CMakeLists.txt  TestSoFl.cpp  TestSuiteMain.cpp
testsuite/widgets/: CMakeLists.txt  TestFullViewer.cpp  TestSoFlGLWidgetP.cpp  TestSoFlThumbWheel.cpp
(+70 files in other folders)
